--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,16 @@
 services:
     web:
         build: .
-        ports:
-            - "4000:80"
     redis:
         image: redis
-#        ports:
-#            - "6379:6379"
         volumes:
             - "./data:/data"
         command: redis-server --appendonly yes
+    lb:
+        image: dockercloud/haproxy
+        ports:
+            - 4000:80
+        links:
+            - web
+        volumes:
+            - /var/run/docker.sock:/var/run/docker.sock
